# hackathon-gstreamer

./: .gitignore  README.md
src/: CMakeLists.txt  basic-tutorial-1.c
